--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@
               alt="Игорь дизайнер"
               width="270"
             />
+            <div class="card-info"> 
             <h3 class="card-title">Игорь Демьяненко</h3>
-            <p lang="en" class="card-info">Product Designer</p>
+            <p lang="en" class="card-prof">Product Designer</p>
+          </div>
           </li>
 
           <li class="our-team-card">
@@ -141,8 +143,10 @@
               alt="Ольга фронтэнд разработчик"
               width="270"
             />
+            <div class="card-info">
             <h3 class="card-title" >Ольга Репина</h3>
-            <p lang="en" class="card-info">Frontend Developer</p>
+            <p lang="en" class="card-prof">Frontend Developer</p>
+          </div>
           </li>
 
           <li class="our-team-card">
@@ -151,8 +155,10 @@
               alt="Тарас маркетолог"
               width="270"
             />
+            <div class="card-info">
             <h3 class="card-title">Николай Тарасов</h3>
-            <p lang="en" class="card-info">Marketing</p>
+            <p lang="en" class="card-prof">Marketing</p>
+          </div>
           </li>
 
           <li class="our-team-card">
@@ -161,14 +167,16 @@
               alt="Михаил дизайнер"
               width="270"
             />
+            <div class="card-info"> 
             <h3 class="card-title">Михаил Ермаков</h3>
-            <p lang="en" class="card-info">UI Designer</p>
+            <p lang="en" class="card-prof">UI Designer</p>
+          </div>
           </li>
         </ul>
         </div>
       </section>
 
-      <footer class=" footer">
+      <footer class="footer">
         <div class="container"> 
        <div class="footer-box-logo">
         <a href="#" lang="en" class="logo-link link"> <span class="logo-blue">Web</span>Studio</a>
